--- a/html/intro.html
+++ b/html/intro.html
@@ -20,5 +20,6 @@
   <h3>This is CSS Tutorial</h3>
    <p style="color: red; background-color: green;"> THis is tutorial will teach you everythings you need to know about HTML/CSS</p>  <!--//ye second no. par exicute hoga -->
       <p>THis is tutorial will teach you everythings you need to know about HTML/CSS</p>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo, id amet ipsa accusantium excepturi qui quasi animi sint dicta omnis eos, consequuntur quod dolorem dignissimos eius doloremque incidunt saepe a magnam aspernatur!</p>
   </body>
 </html>
